--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,5 +14,5 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Print a Message
-        run: echo "Hello, GitHub Actions!"
+        run: echo "Hello everyone!"
 
